--- a/.github/workflows/azure-spring-cloud.yml
+++ b/.github/workflows/azure-spring-cloud.yml
@@ -11,6 +11,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: CD Payment Domain
+      run: cd ./Payment
     - name: Build with Maven
       run: mvn package -DskipTests
     - name: Login to Azure Spring Cloud
